# Reconnaissance-de-Plantes-avec-NN

./: CMakeLists.txt  Convolution_layer.cpp  Data.cpp  Helpful Courses.md  Makefile  PVs des Reunions.md  Pooling_layer.cpp  README.md  main.cpp  output.cpp  softmax_layer.cpp
Bibliographie/Codes Examples/CNN Plants/: PlantClassificationCNN.py  readme.cmd
Bibliographie/Codes Examples/master-thesis/: Frontpage.tex  Main.tex  References.bib
Bibliographie/Neural_Network_Initiation/: result.txt
Codes Examples/master-thesis/Chapters/: 03Technologies.tex  (+5 more)
Dataset/: Description_Data  label_map.pkl  resize.py  test.csv  train.csv  validation.csv
Neural_Network_Initiation/: Neural Network Project.odt  Simple_NN  Simple_NN.cpp
Profiling/: gprof_result.txt  info-vec-optimized  infomachine_cache.txt  perf.data  profiling_report.txt
Project Output/Dataset/: resize.py
Project Output/Projet/source/: CMakeLists.txt  Convolution_layer.cpp  Data.cpp  Direction_file.cpp  Pooling_layer.cpp  Random_weights.cpp  main.cpp  output.c  output.cpp  softmax_layer.cpp  softmax_layer.h
Rapports Reunions/Code en Python/: model_2classes.py  model_4classes.py  test.py
code_test/: test_main.cpp
include/: Convolution_layer.h  Data.h  Output.h  Pooling_layer.h
optimization/: analysis_after_compilation_flags.txt  analysis_convolution_code_structuring.txt  cpu_snb_cluster.txt  results.ods
rapport/: Scalability Result
source/: Convolution_layer.cpp  output.cpp
src/: Convolution_layer.cpp  Data.cpp  Pooling_layer.cpp  main.cpp  output.cpp  softmax_layer.cpp
test/: test_main.cpp
(+10 files in other folders)
